--- a/src/components/loginForm/login.module.css
+++ b/src/components/loginForm/login.module.css
@@ -43,3 +43,37 @@
   font-size: large;
   color: white;
 }
+/* .contacts {
+  display: ;
+} */
+.textHi {
+  display: flex;
+  justify-content: center;
+  font-weight: 400;
+  font-size: larger;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 15px;
+  color: gray;
+  padding: 10px;
+}
+
+.buttonFormOut {
+  cursor: pointer;
+  border: solid 1px white;
+  background-color: cadetblue;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: large;
+  color: white;
+  margin-left: 5px;
+}
+.buttonFormOut:hover {
+  cursor: pointer;
+  border: solid 1px white;
+  background-color: red;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: large;
+  color: white;
+  transition: background-color 0.9s ease;
+}
