--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -5,26 +5,19 @@
   text-decoration: none;
 }
 .home {
-  margin: 10px;
-  list-style: none;
-  text-decoration: none;
-  font-weight: 400;
-  font-size: larger;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 5px;
-
-  font-weight: 400;
-  font-size: larger;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 5px;
-  border: 1px solid white;
-  background: beige;
-  padding: 10px;
+  cursor: pointer;
+  cursor: pointer;
+  border: solid 1px white;
+  background-color: cadetblue;
   border-radius: 10px;
+  padding: 10px;
+  font-size: large;
+  color: white;
+  margin: 5px;
 }
 .home:hover {
   border: solid 1px white;
-  background-color: cadetblue;
+  background-color: red;
   border-radius: 10px;
   padding: 10px;
   font-size: large;
