--- a/src/pages/page.module.css
+++ b/src/pages/page.module.css
@@ -1,5 +1,15 @@
 .title {
   font-weight: 600;
   font-family: 'Times New Roman', Times, serif;
-  font-size: 19px;
+  font-size: 49px;
+  display: flex;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 5px;
+  border: 1px solid white;
+  background: beige;
+  padding: 10px;
+  border-radius: 10px;
+  margin: auto;
+  color: darkgray;
 }
